--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,13 @@
 }
 
 .grid {
-	justify-content: space-between;
+	grid-gap: 20px;
+	justify-content: center;
 	display: grid;
-	grid-template: repeat(3, 200px) / repeat(6, 400px);
+	grid-template: repeat(3, 400px) / repeat(3, 200px);
+}
+
+.card {
+	border: 1px solid black;
+	radius: 5px;
 }
