--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,13 +15,37 @@
   min-width: 500px;
 } */
 
+/* @keyframes test {
+  0%   {background-color: red;}
+    25%  {background-color: yellow;}
+    50%  {background-color: blue;}
+    100% {background-color: green;}
+} */
+
 .card {
+  -webkit-transition-duration: .5s; /* Safari */
+  transition-duration: .5s;
   padding-top: 5px;
   width: 115px;
   height: 150px;
   margin: 5px;
 	border: 1px solid black;
 	border-radius: 5px;
+  display: inline-block;
+}
+/*
+.card:hover {
+  box-shadow: 1px 2px 2px 1px black;
+} */
+
+#player-deck {
+  box-shadow: 1px 1px 2px black;
+  padding-top: 5px;
+  width: 115px;
+  height: 150px;
+  margin: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
   display: inline-block;
 }
 
