--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,10 +1,10 @@
-.App {
+/* .App {
   text-align: center;
 }
 
 .big-text {
   font-size: 30px;
-}
+} */
 
 /* .grid {
 	grid-gap: 20px;
@@ -22,24 +22,13 @@
     100% {background-color: green;}
 } */
 
-.card {
-  -webkit-transition-duration: .5s; /* Safari */
-  transition-duration: .5s;
-  padding-top: 5px;
-  width: 115px;
-  height: 150px;
-  margin: 5px;
-	border: 1px solid black;
-	border-radius: 5px;
-  display: inline-block;
-}
+
 /*
 .card:hover {
   box-shadow: 1px 2px 2px 1px black;
 } */
-
+/*
 #player-deck {
-  box-shadow: 1px 1px 2px black;
   padding-top: 5px;
   width: 115px;
   height: 150px;
@@ -47,7 +36,7 @@
   border: 1px solid black;
   border-radius: 5px;
   display: inline-block;
-}
+} */
 
 /*
 .grid {
