--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -29,14 +29,25 @@
   -o-transform: $transformation;
 }
 
-
-
-.App {
-  text-align: center;
+@mixin border-opacity($color, $opacity) {
+	$opacity: $opacity / 100;
 }
 
-.card-wrapper {
-  perspective: 300px;
+
+.card-container {
+  // perspective: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  #show {
+    @include transform(rotatey(-180deg));
+    .back {
+      display: none !important;
+    }
+    .front {
+
+      z-index: 10 !important;
+    }
+  }
 }
 
 .card {
@@ -44,60 +55,56 @@
   @include transition(2s);
   &:hover {
     @include transform(rotatey(-180deg));
-    border: none;
+    border: 1px solid rgba(0, 0, 0, .5);
   }
 
   -webkit-transition-duration: .5s; /* Safari */
   transition-duration: .5s;
-  margin: 10px;
+  margin: 5px;
   width: 115px;
   height: 170px;
-	border: 1px solid rgba(0, 0, 0, .5);
+	border: 1px solid rgba(0, 0, 0, .0);
 	border-radius: 5px;
   display: inline-block;
   box-shadow: 1px 1px 2px 2px rgba(0,0,0,.2);
   position: relative;
+  text-align: center;
+
 
   .front, .back {
     @include backface-visibility;
     position: absolute;
+    display: flex;
+    justify-content: center;
   }
 
   .front {
-    z-index: 3;
+    @include transform(rotatey(-180deg));
+    z-index: 1;
+    height: 100%;
+    width: 100%;
   }
 
   .back {
-    @include transform(rotatey(180deg));
-    z-index: 1;
+    z-index: 3;
     width: 100%;
     height: 100%;
     background-image: url("../images/card-back.png");
     background-size: 100% 100%;
-    .photo {
 
-      width: 100%;
-
-    }
   }
-
-
 }
-/*
-.card:hover {
-  box-shadow: 1px 2px 2px 1px black;
-} */
 
-#player-deck {
-  box-shadow: 1px 1px 2px black;
-  padding-top: 5px;
-  width: 115px;
-  height: 150px;
-  margin: 5px;
-  border: 1px solid black;
-  border-radius: 5px;
-  display: inline-block;
-}
+// #player-deck {
+//   box-shadow: 1px 1px 2px black;
+//   padding-top: 5px;
+//   width: 115px;
+//   height: 150px;
+//   margin: 5px;
+//   border: 1px solid black;
+//   border-radius: 5px;
+//   display: inline-block;
+// }
 
 /*
 .grid {
