--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,10 @@
+@keyframes cardenter {
+  0% {
+    transform: rotateY(0deg); }
+  100% {
+    transform-style: preserve-3d;
+    transform: rotatey(-180deg);
+    transition: 1s; } }
 .card-container {
   display: flex;
   flex-wrap: wrap; }
@@ -6,7 +13,10 @@
     -webkit-transform: rotatey(-180deg);
     -moz-transform: rotatey(-180deg);
     -ms-transform: rotatey(-180deg);
-    -o-transform: rotatey(-180deg); }
+    -o-transform: rotatey(-180deg);
+    animation-name: cardenter;
+    animation-duration: .5s;
+    border: 1px solid rgba(0, 0, 0, 0.5); }
 
 .card {
   transform-style: preserve-3d;
@@ -30,8 +40,6 @@
   box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
   position: relative;
   text-align: center; }
-  .card:hover {
-    cursor: pointer; }
   .card .front, .card .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -56,8 +64,15 @@
     height: 100%;
     background-image: url("../images/card-back.png");
     background-size: 100% 100%; }
+    .card .back:hover {
+      cursor: pointer; }
 
 .flipit {
+  transform: rotatey(-180deg);
+  -webkit-transform: rotatey(-180deg);
+  -moz-transform: rotatey(-180deg);
+  -ms-transform: rotatey(-180deg);
+  -o-transform: rotatey(-180deg);
   transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   -o-transform-style: preserve-3d;
@@ -67,12 +82,16 @@
   -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
   -o-transition: 0.5s;
-  transform: rotatey(-180deg);
-  -webkit-transform: rotatey(-180deg);
-  -moz-transform: rotatey(-180deg);
-  -ms-transform: rotatey(-180deg);
-  -o-transform: rotatey(-180deg);
   border: 1px solid rgba(0, 0, 0, 0.5); }
+
+.page-header {
+  margin: 0;
+  background-color: lightblue;
+  background-size: cover;
+  padding-top: 10px;
+  height: 5em; }
+  .page-header h1 {
+    margin: 0; }
 
 /*
 .grid {
