--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -45,6 +45,12 @@
   }
 }
 
+@media only screen and (max-width: 600px){
+  .card {
+    display: block;
+  }
+}
+
 .card-container {
   // perspective: 300px;
   display: flex;
@@ -66,6 +72,7 @@
   transition-duration: .5s;
   margin: 5px;
   width: 115px;
+  min-width: 115px;
   height: 170px;
 	border: 1px solid rgba(0, 0, 0, .0);
 	border-radius: 5px;
@@ -102,8 +109,6 @@
   }
 }
 
-
-
 .flipit {
   @include transform(rotatey(-180deg));
   @include transform-style(preserve-3d);
@@ -121,6 +126,12 @@
   h1 {
     margin: 0;
   }
+}
+
+#button-group {
+  min-width: 200px;
+  position: relative;
+  margin: 5px;
 }
 
 // a {
