--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -162,8 +162,8 @@ body {
   min-width: 130px;
   position: fixed;
   display: inline-block;
-  height: 100vh;
-  margin: 5px;
+  top: 30%;
+  left: auto;
   z-index: 300;
 }
 
