--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -75,6 +75,15 @@ body {
   margin: auto;
   position: relative;
   opacity: .8;
+
+}
+.touch {
+
+  height: 37px;
+  margin: auto;
+  margin-left: 15px;
+  position: relative;
+  opacity: .8;
 }
 
 .card-container {
