--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -212,7 +212,7 @@ body {
   border-bottom-right-radius: 5px;
   position: fixed;
   z-index: 1000;
-  width: 25px;
+  width: 20px;
   height: 60px;
   float: left;
   top: 48.5%;
@@ -226,7 +226,7 @@ body {
   }
 
   75% {
-    width: 400px;
+    width: 100%;
     height: 30px;
     margin-top: inherit;
     .menu-items {
@@ -235,21 +235,21 @@ body {
   }
 
   100% {
-    height: 600px;
-    width: 400px;
-    margin-top: -300px;
+    height: 100%;
+    width: 100%;
+    margin-top: -250px;
   }
 }
 
 @keyframes slideIn {
   0% {
-    height: 600px;
-    width: 400px;
-    margin-top: -300px;
+    height: 100%;
+    width: 100%;
+    margin-top: -250px;
   }
 
   75% {
-    width: 400px;
+    width: 100%;
     height: 30px;
     margin-top: inherit;
   }
@@ -266,16 +266,10 @@ body {
   to { visibility: visible; }
 }
 
-@media only screen and (max-width: 600px){
-  .nav-menu {
-    background: rgb(244, 167, 66);
-  }
-}
-
 .nav-wrapper {
   position: absolute;
-  height: 30px;
-  width: 0px;
+  height: 60%;
+  width: 25%;
   top: 50%;
   transition: 2s ease-out;
   z-index: 500;
@@ -283,7 +277,7 @@ body {
 
   .nav-menu {
     @include clear-box;
-    background: rgba(244, 167, 66, .5);
+    background: rgba(244, 167, 66, .8);
     animation-name: slideOut;
     animation-duration: 1s;
     animation-fill-mode: forwards;
@@ -301,7 +295,7 @@ body {
   }
 
   .nav-menu-closed {
-    background: rgba(244, 167, 66, .5);
+    background: rgba(244, 167, 66, .8);
     animation-name: slideIn;
     animation-duration: 1s;
     animation-fill-mode: forwards;
