--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -268,8 +268,8 @@ body {
 
 .nav-wrapper {
   position: fixed;
-  height: 60%;
-  width: 25%;
+  height: 30px;
+  width: 0px;
   top: 50%;
   transition: 2s ease-out;
   z-index: 500;
