--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -306,3 +306,216 @@ body {
     visibility: hidden;
   }
 }
+
+/* CARD IMAGES */
+
+.card-wrapper {
+  width: 213px;
+  height: 268px;
+  display: inline-block;
+}
+
+
+.spread {
+  width: 350px;
+  height: 250px;
+  position: relative;
+}
+
+.spread > .cardd {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: top 0.3s ease, left 0.3s ease;
+  -moz-transition: top 0.3s ease, left 0.3s ease;
+  -o-transition: top 0.3s ease, left 0.3s ease;
+  -ms-transition: top 0.3s ease, left 0.3s ease;
+  // transition: top 0.3s ease, left 0.3s ease;
+  transition: .5s ease;
+}
+
+.spread {
+  width: 350px;
+  height: 250px;
+  position: relative;
+}
+
+.spread > .cardd {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: top 0.3s ease, left 0.3s ease;
+  -moz-transition: top 0.3s ease, left 0.3s ease;
+  -o-transition: top 0.3s ease, left 0.3s ease;
+  -ms-transition: top 0.3s ease, left 0.3s ease;
+  // transition: top 0.3s ease, left 0.3s ease;
+  transition: .5s ease;
+}
+
+.spread:hover .suitdiamonds {
+  -webkit-transform: rotate(-10deg);
+  -moz-transform: rotate(-10deg);
+  -o-transform: rotate(-10deg);
+  -ms-transform: rotate(-10deg);
+  transform: rotate(-10deg);
+  transition: .5s;
+}
+
+.spread:hover .suithearts {
+  left: 30px;
+  top: 0px;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  transform: rotate(0deg);
+  transition: .5s;
+}
+
+.spread:hover .suitclubs {
+  left: 60px;
+  top: 5px;
+  -webkit-transform: rotate(10deg);
+  -moz-transform: rotate(10deg);
+  -o-transform: rotate(10deg);
+  -ms-transform: rotate(10deg);
+  transform: rotate(10deg);
+  transition: .5s;
+}
+
+.spread:hover .suitspades{
+  left: 80px;
+  top: 10px;
+  -webkit-transform: rotate(20deg);
+  -moz-transform: rotate(20deg);
+  -o-transform: rotate(20deg);
+  -ms-transform: rotate(20deg);
+  transform: rotate(20deg);
+  transition: .5s;
+}
+
+.spread > .cardd:hover {
+  -webkit-box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
+  box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
+}
+
+body {
+  background: #00a651;
+}
+
+.cardd {
+  position: relative;
+  float: left;
+  margin-right: 10px;
+  width: 123px;
+  height: 178px;
+  border-radius: 10px;
+  background: #fff;
+  -webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+  box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+
+  p {
+    text-align: center;
+    font: 80px/160px Georgia, Times New Roman, serif;
+  }
+}
+
+.suitdiamonds:before, .suitdiamonds:after {
+  content: "♦";
+  color: #ff0000;
+}
+
+.suithearts:before, .suithearts:after {
+  content: "♥";
+  color: #ff0000;
+}
+
+.suitclubs:before, .suitclubs:after {
+  content: "♣";
+  color: #000;
+}
+
+.suitspades:before, .suitspades:after {
+  content: "♠";
+  color: #000;
+}
+
+div[class*='suit']:before {
+  position: absolute;
+  font-size: 35px;
+  left: 5px;
+  top: 5px;
+}
+
+div[class*='suit']:after {
+  position: absolute;
+  font-size: 35px;
+  right: 5px;
+  bottom: 5px;
+}
+
+// .card-1 {
+//   width: 113px;
+//   height: 168px;
+//   background: url('../images/card-fronts.png') 0 0;
+//   border-radius: 10px;
+//   background-size: 1400%;
+//   margin: 5px;
+// }
+//
+// .card-2 {
+//   width: 113px;
+//   height: 168px;
+//   background: url('../images/card-fronts.png') -122px 0;
+//   border-radius: 10px;
+//   background-size: 1400%;
+//
+//   margin: 5px;
+// }
+// .card-3 {
+//   width: 113px;
+//   height: 168px;
+//   background: url('../images/card-fronts.png') -245px 0;
+//   border-radius: 10px;
+//   background-size: 1400%;
+//   margin: 5px;
+// }
+//
+// $card: card;
+// $amount: -122px;
+//
+// @for $i from 1 through 13 {
+//
+//   .#{$card}-#{$i} {
+//     position: absolute;
+//     width: 113px;
+//     height: 168px;
+//     background: url('../images/card-fronts.png') $i * $amount 0;
+//     border-radius: 11px;
+//     background-size: 1400%;
+//     display: inline-block;
+//     margin: 5px;
+//   }
+// }
+
+
+// width: 360px;
+// height: 540px;
+// background: url('../images/card-fronts.png') -30px -30px;
+// border-radius: 30px;
+// background-size: cover;
+
+// .card-wrapper {
+//   height: 8.85em;
+//   width: 6.4em;
+//   background-color: #fff;
+//   border: 1px solid #695d39;
+//   border-radius: .5em;                       /* omitted -moz- and -webkit- hacks */
+//   box-shadow: -.25em .25em .5em -.25em #000; /* omitted -moz- and -webkit- hacks */
+//   font-family: 'Times', serif;
+//   line-height: 1em;
+//   padding-top: .25em;
+//   padding-left: .1em;
+//   letter-spacing: -.2em;
+//   position: absolute;
+// }
