--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -50,7 +50,7 @@ $text-shadow: -1px 1px 1px rgba(0, 0, 0, .4);
 
 @keyframes cardenter {
   0% {
-    transform: rotateY(0deg);
+    transform: rotatey(0deg);
   }
   100% {
     transform-style: preserve-3d;
@@ -96,13 +96,15 @@ body {
 
 .card-container {
   // perspective: 300px;
+
   display: flex;
   flex-wrap: wrap;
   #show {
-    @include transform(rotatey(-180deg));
+    // @include transform(rotatey(-180deg));
     animation-name: cardenter;
     animation-duration: .5s;
-      border: 1px solid rgba(0, 0, 0, .5);
+    border: 1px solid rgba(0, 0, 0, .5);
+
   }
 }
 
@@ -122,12 +124,20 @@ body {
   box-shadow: 1px 1px 2px 2px rgba(0,0,0,.2);
   position: relative;
   text-align: center;
-
+  // position: relative;
+  // float: left;
+  // width: 123px;
+  // height: 178px;
+  // border-radius: 10px;
+  // background: #fff;
+  // -webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+  // box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
 
   .front, .back {
     @include backface-visibility;
     position: absolute;
     display: flex;
+    align-content: space-around;
     justify-content: center;
   }
 
@@ -137,9 +147,11 @@ body {
     z-index: 1;
     height: 100%;
     width: 100%;
+
   }
 
   .back {
+
     z-index: 3;
     width: 100%;
     height: 100%;
@@ -316,13 +328,26 @@ body {
 }
 
 
+.spread > .card {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: top 0.3s ease, left 0.3s ease;
+  -moz-transition: top 0.3s ease, left 0.3s ease;
+  -o-transition: top 0.3s ease, left 0.3s ease;
+  -ms-transition: top 0.3s ease, left 0.3s ease;
+  transition: top 0.3s ease, left 0.3s ease;
+  transition: .5s ease;
+}
+
 .spread {
-  width: 350px;
+  margin-top: 20px;
+  width: 250px;
   height: 250px;
   position: relative;
 }
 
-.spread > .cardd {
+.spread > .card {
   position: absolute;
   top: 0;
   left: 0;
@@ -335,66 +360,87 @@ body {
 }
 
 .spread {
-  width: 350px;
-  height: 250px;
-  position: relative;
+  &:hover {
+    :nth-child(1) {
+      -webkit-transform: rotate(-10deg);
+      -moz-transform: rotate(-10deg);
+      -o-transform: rotate(-10deg);
+      -ms-transform: rotate(-10deg);
+      transform: rotate(-10deg);
+      transition: .5s;
+    }
+
+    // @if(.spread.)
+
+    :nth-child(2) {
+      left: 30px;
+      top: 0px;
+      -webkit-transform: rotate(10deg);
+      -moz-transform: rotate(10deg);
+      -o-transform: rotate(10deg);
+      -ms-transform: rotate(10deg);
+      transform: rotate(10deg);
+      transition: .5s;
+    }
+
+    :nth-child(3) {
+      left: 60px;
+      top: 5px;
+      -webkit-transform: rotate(30deg);
+      -moz-transform: rotate(30deg);
+      -o-transform: rotate(30deg);
+      -ms-transform: rotate(30deg);
+      transform: rotate(30deg);
+      transition: .5s;
+    }
+
+    :nth-child(4) {
+      left: 80px;
+      top: 10px;
+      -webkit-transform: rotate(50deg);
+      -moz-transform: rotate(50deg);
+      -o-transform: rotate(50deg);
+      -ms-transform: rotate(50deg);
+      transform: rotate(50deg);
+      transition: .5s;
+    }
+  }
 }
 
-.spread > .cardd {
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-transition: top 0.3s ease, left 0.3s ease;
-  -moz-transition: top 0.3s ease, left 0.3s ease;
-  -o-transition: top 0.3s ease, left 0.3s ease;
-  -ms-transition: top 0.3s ease, left 0.3s ease;
-  // transition: top 0.3s ease, left 0.3s ease;
-  transition: .5s ease;
-}
+// .spread:hover .suithearts {
+//   left: 30px;
+//   top: 0px;
+//   -webkit-transform: rotate(0deg);
+//   -moz-transform: rotate(0deg);
+//   -o-transform: rotate(0deg);
+//   -ms-transform: rotate(0deg);
+//   transform: rotate(0deg);
+//   transition: .5s;
+// }
+//
+// .spread:hover .suitclubs {
+//   left: 60px;
+//   top: 5px;
+//   -webkit-transform: rotate(10deg);
+//   -moz-transform: rotate(10deg);
+//   -o-transform: rotate(10deg);
+//   -ms-transform: rotate(10deg);
+//   transform: rotate(10deg);
+//   transition: .5s;
+// }
+//
+// .spread:hover .suitspades{
+//   left: 80px;
+//   top: 10px;
+//   -webkit-transform: rotate(20deg);
+//   -moz-transform: rotate(20deg);
+//   -o-transform: rotate(20deg);
+//   -ms-transform: rotate(20deg);
+//   transform: rotate(20deg);
+//   transition: .5s;
+// }
 
-.spread:hover .suitdiamonds {
-  -webkit-transform: rotate(-10deg);
-  -moz-transform: rotate(-10deg);
-  -o-transform: rotate(-10deg);
-  -ms-transform: rotate(-10deg);
-  transform: rotate(-10deg);
-  transition: .5s;
-}
-
-.spread:hover .suithearts {
-  left: 30px;
-  top: 0px;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
-  transition: .5s;
-}
-
-.spread:hover .suitclubs {
-  left: 60px;
-  top: 5px;
-  -webkit-transform: rotate(10deg);
-  -moz-transform: rotate(10deg);
-  -o-transform: rotate(10deg);
-  -ms-transform: rotate(10deg);
-  transform: rotate(10deg);
-  transition: .5s;
-}
-
-.spread:hover .suitspades{
-  left: 80px;
-  top: 10px;
-  -webkit-transform: rotate(20deg);
-  -moz-transform: rotate(20deg);
-  -o-transform: rotate(20deg);
-  -ms-transform: rotate(20deg);
-  transform: rotate(20deg);
-  transition: .5s;
-}
-
-.spread > .cardd:hover {
+.spread > .card:hover {
   -webkit-box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
   box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
 }
@@ -403,7 +449,7 @@ body {
   background: #00a651;
 }
 
-.cardd {
+.card {
   position: relative;
   float: left;
   margin-right: 10px;
