--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -132,6 +132,7 @@ body {
 	background: #fff;
 	-webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
 	box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+	margin-bottom: 15px;
 
 	.front, .back {
 		@include backface-visibility;
@@ -363,61 +364,72 @@ body {
 }
 
 .spread {
-	&:hover {
-		:nth-child(1) {
-			-webkit-transform: rotate(-10deg);
-			-moz-transform: rotate(-10deg);
-			-o-transform: rotate(-10deg);
-			-ms-transform: rotate(-10deg);
-			transform: rotate(-10deg);
-			transition: .5s;
-		}
+	:nth-child(1) {
+		// bottom: 40px;
+		right: 100px;
+		top: 10px;
+		-webkit-transform: rotate(-30deg);
+		-moz-transform: rotate(-30deg);
+		-o-transform: rotate(-30deg);
+		-ms-transform: rotate(-30deg);
+		transform: rotate(-30deg);
+		transition: .5s;
+	}
 
-		// @if(.spread.)
+	// @if(.spread.)
 
-		:nth-child(2) {
-			left: 30px;
-			top: 0px;
-			-webkit-transform: rotate(10deg);
-			-moz-transform: rotate(10deg);
-			-o-transform: rotate(10deg);
-			-ms-transform: rotate(10deg);
-			transform: rotate(10deg);
-			transition: .5s;
-		}
+	:nth-child(2) {
+		left: 50px;
+		-webkit-transform: rotate(10deg);
+		-moz-transform: rotate(10deg);
+		-o-transform: rotate(10deg);
+		-ms-transform: rotate(10deg);
+		transform: rotate(10deg);
+		transition: .5s;
+	}
 
-		:nth-child(3) {
-			left: 60px;
-			top: 10px;
-			-webkit-transform: rotate(30deg);
-			-moz-transform: rotate(30deg);
-			-o-transform: rotate(30deg);
-			-ms-transform: rotate(30deg);
-			transform: rotate(30deg);
-			transition: .5s;
-		}
 
-		:nth-child(4) {
-			left: 80px;
-			top: 20px;
-			-webkit-transform: rotate(50deg);
-			-moz-transform: rotate(50deg);
-			-o-transform: rotate(50deg);
-			-ms-transform: rotate(50deg);
-			transform: rotate(50deg);
-			transition: .5s;
-		}
+	:nth-child(2):last-child {
+		left: 100px;
+		-webkit-transform: rotate(30deg);
+		-moz-transform: rotate(30deg);
+		-o-transform: rotate(30deg);
+		-ms-transform: rotate(30deg);
+		transform: rotate(30deg);
+		transition: .5s;
+	}
 
-		:nth-child(5) {
-			left: 100px;
-			top: 30px;
-			-webkit-transform: rotate(70deg);
-			-moz-transform: rotate(70deg);
-			-o-transform: rotate(70deg);
-			-ms-transform: rotate(70deg);
-			transform: rotate(70deg);
-			transition: .5s;
-		}
+	:nth-child(3) {
+		left: 200px;
+		top: 10px;
+		-webkit-transform: rotate(30deg);
+		-moz-transform: rotate(30deg);
+		-o-transform: rotate(30deg);
+		-ms-transform: rotate(30deg);
+		transform: rotate(30deg);
+		transition: .5s;
+	}
+
+	:nth-child(4) {
+		left: 80px;
+		top: 20px;
+		-webkit-transform: rotate(50deg);
+		-moz-transform: rotate(50deg);
+		-o-transform: rotate(50deg);
+		-ms-transform: rotate(50deg);
+		transform: rotate(50deg);
+		transition: .5s;
+	}
+
+	:nth-child(5) {
+		left: 100px;
+		top: 30px;
+		-webkit-transform: rotate(70deg);
+		-moz-transform: rotate(70deg);
+		-o-transform: rotate(70deg);
+		-ms-transform: rotate(70deg);
+		transform: rotate(70deg);
+		transition: .5s;
 	}
 }
 
@@ -454,7 +466,7 @@ body {
 //   transition: .5s;
 // }
 
-.spread > .card:hover {
+.spread > .card .fanned {
 	-webkit-box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
 	box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
 }
@@ -517,68 +529,23 @@ div[class*='suit']:after {
 	bottom: 5px;
 }
 
-// .card-1 {
-//   width: 113px;
-//   height: 168px;
-//   background: url('../images/card-fronts.png') 0 0;
-//   border-radius: 10px;
-//   background-size: 1400%;
-//   margin: 5px;
-// }
-//
-// .card-2 {
-//   width: 113px;
-//   height: 168px;
-//   background: url('../images/card-fronts.png') -122px 0;
-//   border-radius: 10px;
-//   background-size: 1400%;
-//
-//   margin: 5px;
-// }
-// .card-3 {
-//   width: 113px;
-//   height: 168px;
-//   background: url('../images/card-fronts.png') -245px 0;
-//   border-radius: 10px;
-//   background-size: 1400%;
-//   margin: 5px;
-// }
-//
-// $card: card;
-// $amount: -122px;
-//
-// @for $i from 1 through 13 {
-//
-//   .#{$card}-#{$i} {
-//     position: absolute;
-//     width: 113px;
-//     height: 168px;
-//     background: url('../images/card-fronts.png') $i * $amount 0;
-//     border-radius: 11px;
-//     background-size: 1400%;
-//     display: inline-block;
-//     margin: 5px;
-//   }
-// }
 
 
-// width: 360px;
-// height: 540px;
-// background: url('../images/card-fronts.png') -30px -30px;
-// border-radius: 30px;
-// background-size: cover;
 
-// .card-wrapper {
-//   height: 8.85em;
-//   width: 6.4em;
-//   background-color: #fff;
-//   border: 1px solid #695d39;
-//   border-radius: .5em;                       /* omitted -moz- and -webkit- hacks */
-//   box-shadow: -.25em .25em .5em -.25em #000; /* omitted -moz- and -webkit- hacks */
-//   font-family: 'Times', serif;
-//   line-height: 1em;
-//   padding-top: .25em;
-//   padding-left: .1em;
-//   letter-spacing: -.2em;
-//   position: absolute;
-// }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
