--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,23 +2,10 @@
 @-webkit-keyframes cardenter {
   0% {
     transform: rotatey(0deg);
-    -webkit-transform: rotatey(0deg); }
+    transform-style: preserve-3d; }
   100% {
     transform-style: preserve-3d;
-    transform: rotatey(180deg);
-    transition: .5s;
-    -webkit-transform-style: preserve-3d;
-    -webkit-transform: rotatey(180deg);
-    -webkit-transition: .5s;
-    -moz-transform-style: preserve-3d;
-    -moz-transform: rotatey(180deg);
-    -moz-transition: .5s;
-    -ms-transform-style: preserve-3d;
-    -ms-transform: rotatey(180deg);
-    -ms-transition: .5s;
-    -o-transform-style: preserve-3d;
-    -o-transform: rotatey(180deg);
-    -o-transition: .5s; } }
+    transform: rotatey(180deg); } }
 
 @-webkit-keyframes react-logo-spin {
   from {
@@ -27,18 +14,18 @@
     transform: rotate(360deg); } }
 
 @media only screen and (max-width: 600px) {
-  /* line 83, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 86, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card {
     display: block; }
-  /* line 86, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 89, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .react-logo {
     display: none; } }
 
-/* line 91, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 94, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c); }
 
-/* line 95, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 98, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .react-logo {
   animation: react-logo-spin infinite 15s linear;
   height: 50px;
@@ -46,7 +33,7 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 103, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 106, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .touch {
   height: 37px;
   margin: auto;
@@ -54,16 +41,14 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 112, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 114, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-container {
-  perspective: 900px;
-  display: flex;
-  flex-wrap: wrap; }
+  *display: flex;
+  *flex-wrap: wrap; }
 
-/* line 118, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 119, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card {
   margin-bottom: 10px;
-  display: inline-block;
   position: relative;
   float: left;
   margin-right: 10px;
@@ -73,13 +58,7 @@ body {
   background: #fff;
   -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
   box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3); }
-  /* line 132, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
-  .card p {
-    text-align: center;
-    font: 80px/160px Georgia, Times New Roman, serif;
-    position: absolute;
-    z-index: 20000; }
-  /* line 140, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 131, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front, .card .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -87,36 +66,70 @@ body {
     -ms-backface-visibility: hidden;
     -o-backface-visibility: hidden;
     position: absolute;
+    -webkit-position: absolute;
     display: flex;
+    -webkit-display: flex;
     align-content: space-around;
     justify-content: center; }
-  /* line 148, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 142, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front {
     transform: rotatey(-180deg);
     -webkit-transform: rotatey(-180deg);
     -moz-transform: rotatey(-180deg);
     -ms-transform: rotatey(-180deg);
     -o-transform: rotatey(-180deg);
+    transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    transition: 2s;
+    -webkit-transition: 2s;
+    -moz-transition: 2s;
+    -o-transition: 2s;
     z-index: 1;
     height: 100%;
+    position: absolute;
     width: 100%; }
-  /* line 158, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 152, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    .card .front p {
+      text-align: center;
+      font: 80px/160px Georgia, Times New Roman, serif;
+      z-index: 20; }
+  /* line 161, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .back {
     z-index: 3;
     width: 100%;
     height: 100%;
     background-image: url("../images/card-back.png");
     background-size: 100% 100%; }
-    /* line 165, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 168, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .card .back:hover {
       cursor: pointer; }
 
-/* line 171, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 174, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .flipit {
+  transform: rotatey(-180deg);
+  -webkit-transform: rotatey(-180deg);
+  -moz-transform: rotatey(-180deg);
+  -ms-transform: rotatey(-180deg);
+  -o-transform: rotatey(-180deg);
+  transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  transition: 2s;
+  -webkit-transition: 2s;
+  -moz-transition: 2s;
+  -o-transition: 2s;
   animation: cardenter .5s forwards;
-  -webkit-animation: cardenter .5s forwards; }
+  -webkit-animation: cardenter .5s forwards;
+  -webkit-animation-name: cardenter;
+  -webkit-transition-duration: .5s;
+  /* Safari */ }
 
-/* line 189, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 192, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .page-header {
   margin: 0;
   margin-bottom: 10px;
@@ -125,12 +138,12 @@ body {
   padding-top: 10px;
   height: 5em;
   box-shadow: 1px 1px 2px black; }
-  /* line 198, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 201, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .page-header h1 {
     margin: 0;
     padding: 0; }
 
-/* line 204, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 207, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #button-group {
   min-width: 130px;
   position: fixed;
@@ -139,12 +152,12 @@ body {
   left: auto;
   z-index: 30; }
 
-/* line 213, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 216, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .score-text {
   text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
   color: #e60a0a; }
 
-/* line 218, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 221, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #custom-button {
   border-radius: 3px;
   border: 1px solid transparent;
@@ -152,10 +165,10 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100px; }
-  /* line 225, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 228, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:disabled {
     opacity: .4; }
-  /* line 228, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 231, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:hover {
     transition: 0.4s;
     -webkit-transition: 0.4s;
@@ -164,7 +177,7 @@ body {
     border: 1px solid rgba(0, 0, 0, 0.5); }
 
 /* SIDE NAV */
-/* line 236, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 239, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .sidenav-button-a {
   background: rgba(0, 0, 255, 0.5);
   border-top-right-radius: 5px;
@@ -212,7 +225,7 @@ body {
   to {
     visibility: visible; } }
 
-/* line 296, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 299, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .nav-wrapper {
   position: fixed;
   height: 30px;
@@ -221,7 +234,7 @@ body {
   transition: 2s ease-out;
   z-index: 500;
   text-align: center; }
-  /* line 305, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 308, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu {
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-top-right-radius: 5px;
@@ -231,17 +244,17 @@ body {
     animation-name: slideOut;
     animation-duration: 1s;
     animation-fill-mode: forwards; }
-    /* line 311, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 314, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper .nav-menu .menu-items {
       animation-name: showItems;
       animation-delay: .9s;
       animation-duration: .1s;
       animation-fill-mode: forwards; }
-      /* line 317, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+      /* line 320, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
       .nav-wrapper .nav-menu .menu-items ol {
         list-style-position: inside;
         padding: 5px; }
-  /* line 324, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 327, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu-closed {
     background: rgba(244, 167, 66, 0.8);
     animation-name: slideIn;
@@ -251,18 +264,18 @@ body {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 2px 2px; }
-  /* line 332, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 335, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .menu-items {
     visibility: hidden; }
 
 /* CARD IMAGES */
-/* line 339, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 342, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-wrapper {
   width: 213px;
   height: 268px;
   display: inline-block; }
 
-/* line 346, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 349, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -274,14 +287,14 @@ body {
   transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 358, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 361, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread {
   margin-top: 20px;
   width: 250px;
   height: 250px;
   position: relative; }
 
-/* line 365, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 368, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -292,7 +305,7 @@ body {
   -ms-transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 378, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 381, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(1) {
   right: 100px;
   top: 10px;
@@ -303,7 +316,7 @@ body {
   transform: rotate(-30deg);
   transition: .5s; }
 
-/* line 392, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 395, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2) {
   left: 50px;
   -webkit-transform: rotate(10deg);
@@ -313,7 +326,7 @@ body {
   transform: rotate(10deg);
   transition: .5s; }
 
-/* line 403, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 406, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2):last-child {
   left: 100px;
   -webkit-transform: rotate(30deg);
@@ -323,7 +336,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 413, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 416, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(3) {
   left: 200px;
   top: 10px;
@@ -334,7 +347,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 424, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 427, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(4) {
   left: 80px;
   top: 20px;
@@ -345,7 +358,7 @@ body {
   transform: rotate(50deg);
   transition: .5s; }
 
-/* line 435, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 438, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(5) {
   left: 100px;
   top: 30px;
@@ -356,47 +369,47 @@ body {
   transform: rotate(70deg);
   transition: .5s; }
 
-/* line 480, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 483, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card .fanned {
   -webkit-box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4); }
 
-/* line 485, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 488, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: #00a651; }
 
-/* line 509, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 512, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitdiamonds:before, .suitdiamonds:after {
   content: "♦";
   color: #ff0000;
   position: absolute; }
 
-/* line 515, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 518, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suithearts:before, .suithearts:after {
   content: "♥";
   color: #ff0000;
   position: absolute; }
 
-/* line 521, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 524, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitclubs:before, .suitclubs:after {
   content: "♣";
   color: #000;
   position: absolute; }
 
-/* line 527, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 530, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitspades:before, .suitspades:after {
   content: "♠";
   color: #000;
   position: absolute; }
 
-/* line 533, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 536, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:before {
   position: absolute;
   font-size: 35px;
   left: 5px;
   top: 5px; }
 
-/* line 540, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 543, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:after {
   position: absolute;
   font-size: 35px;
